<resources>
    <string name="app_name">VocabCards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learned">Learned</string>
    <string name="words">Words</string>
    <string name="turkish_word">Turkish Word</string>
    <string name="english_word">English Word</string>
    <string name="search">Search</string>
    <string name="learned_words">Learned Words</string>
    <string name="word_details">Word Details</string>
    <string name="word_list">Word List</string>
    <string name="learn">Learn</string>
    <string name="unlearn">Unlearn</string>
    <string name="emoji">Emoji</string>
    <string name="tvphonetic">tvPhonetic</string>
    <string name="german_word">German Word</string>
    <string name="italian_word">Italian Word</string>
    <string name="spanish_word">Spanish Word</string>
    <string name="french_word">French Word</string>
    <string name="definitions">Definitions</string>
    <string name="listen_english_pronunciation">Listen English Pronunciation</string>
    <string name="language">Language</string>
    <string name="english_with_flag">English 🇺🇸</string>
    <string name="spanish_with_flag">Spanish 🇪🇸</string>
    <string name="french_with_flag">French 🇫🇷</string>
    <string name="italian_with_flag">Italian 🇮🇹</string>
    <string name="turkish_with_flag">Turkish 🇹🇷</string>
    <string name="start_learning">Start Learning</string>
    <string name="welcome_to_vocabcards">Welcome to VocabCards!</string>
    <string name="discover_a_fun_and_interactive_way_to_learn_new_words_and_expand_your_vocabulary_let_s_get_started_on_your_language_journey">Discover a fun and interactive way to learn new words and expand your vocabulary. Let’s get started on your language journey!</string>
    <string name="with_vocabcards_you_can_create_custom_flashcards_track_your_progress_and_review_learned_words_easily_make_your_learning_experience_unique_and_tailored_to_your_needs">With VocabCards, you can create custom flashcards, track your progress, and review learned words easily. Make your learning experience unique and tailored to your needs!</string>
    <string name="explore_features">Explore Features</string>
    <string name="let_s_dive_in_click_below_to_start_your_first_vocabulary_lesson_and_unlock_the_world_of_words_your_journey_to_fluency_begins_now">Let’s dive in! Click below to start your first vocabulary lesson and unlock the world of words. Your journey to fluency begins now!</string>
    <string name="ready_to_begin">Ready to Begin?</string>
    <string name="categories">Categories</string>
    <string name="all_words_learned">Congratulations, you\'ve learned all the words! %1$s </string>
    <string name="no_words_learned">No words learned yet! 📚</string>

    <!-- Category Notification Messages -->
    <string name="notification_new_category_title">New Category Added 🎉</string>
    <string name="notification_new_category_message">New categories have been added to Vocabcards! Come and check them out 👀</string>

    <!-- Word Notification Messages -->
    <string name="notification_new_word_title">New Words Added 📚</string>
    <string name="notification_new_word_message">New words have been added to Vocabcards! Come take a look 👀</string>

    <string name="word_learned_message">The word has been learned.</string>
    <string name="word_unlearned_message">The word has been removed from the learned words list.</string>


    <string-array name="language_array">
        <item>English</item>
        <item>Türkçe</item>
        <item>Deutsch</item>
        <item>Italiano</item>
        <item>Español</item>
        <item>Français</item>
    </string-array>

</resources>
