<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- ScrollView to make the content scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="vertical">

            <!-- ProgressBar -->


            <!-- Other UI elements, initially hidden -->
            <LinearLayout
                android:id="@+id/contentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@color/lllorange"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <!-- English Word -->
                        <TextView
                            android:id="@+id/tvDetailEnglishWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english_word"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical" />

                        <!-- Emoji -->
                        <TextView
                            android:id="@+id/tvEmoji"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emoji"
                            android:textSize="24sp"
                            android:paddingStart="8dp"
                            android:layout_gravity="center_vertical" />

                        <!-- Phonetic -->


                    </LinearLayout>

                    <!-- Remaining content below -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:layout_marginTop="36dp">

                        <!-- Turkish Word -->
                        <TextView
                            android:id="@+id/tvDetailTurkishWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/turkish_word"
                            android:textSize="20sp"
                            android:paddingTop="18dp" />

                        <!-- German Word -->
                        <TextView
                            android:id="@+id/tvGermanWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/german_word"
                            android:textSize="18sp"
                            android:paddingTop="18dp" />

                        <!-- Italian Word -->
                        <TextView
                            android:id="@+id/tvItalianWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/italian_word"
                            android:textSize="18sp"
                            android:paddingTop="18dp" />

                        <!-- Spanish Word -->
                        <TextView
                            android:id="@+id/tvSpanishWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spanish_word"
                            android:textSize="18sp"
                            android:paddingTop="18dp" />

                        <!-- French Word -->
                        <TextView
                            android:id="@+id/tvFrenchWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/french_word"
                            android:textSize="18sp"
                            android:paddingTop="18dp" />

                        <!-- Definitions -->


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/learnedButton"
                    android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:backgroundTint="#ED7A27"
                android:text="@string/learned" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
